trying to figure out issues
* will not animate like in codepen
* doesn't look like my codepen pens

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,10 @@
  */
 /* Doodle Stage */
 #stage {
-  /*   background: #ccc; */
     height: 300px;
     width: 600px;
     display: flex;
+    background: white;
     justify-content: center;
     align-items: center;
     overflow: hidden;
